# pixiv-down

./: .gitignore  README.md  pyproject.toml
src/api/: download.py  pixiv_api.py  serach.py
src/api/utils/: __init__.py  pixiv_parse.py  types.py
src/tools/: ffmpeg.py  files.py  logger.py  media.py  types.py
src/ui/: __init__.py  download.py
src/web_parser/: __init__.py  document_parse.py  headers.py
tests/api/: __init__.py  test_download.py  test_search.py
